tests/snapshots/run_wpt_conformance__trtx_reduceMin_float32_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reduce_min.https.any.js",
    "reduceMin float32 3D tensor options.keepDimensions=false",
    "trtx",
    Failed {
        msg: Some(
            "Failed to read tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    reduceMinInput: f32[2, 3, 4];\n  }\n\n  nodes {\n    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label=\"\");\n  }\n\n  outputs { reduceMinOutput; }\n}\n",
        ),
    },
)
